# clams

./: LICENSE.txt  README.md
ros-pkg/core/clams/: CMakeLists.txt  mainpage.dox  manifest.xml
ros-pkg/core/clams/include/clams/: clams_standalone.h  discrete_depth_distortion_model.h  primesense_slam.h  slam_calibration_visualizer.h  slam_calibrator.h  trajectory.h  trajectory_visualizer.h
ros-pkg/core/clams/src/lib/: discrete_depth_distortion_model.cpp  discrete_depth_distortion_model_helpers.cpp  slam_calibration_visualizer.cpp  slam_calibrator.cpp  trajectory.cpp  trajectory_visualizer.cpp
ros-pkg/core/clams/src/prog/: calibrate.cpp  convert_trajectory.cpp  generate_map.cpp  inspect.cpp  primesense_slam.cpp  visualize_model.cpp  visualize_trajectories.cpp  visualize_trajectory.cpp
ros-pkg/core/clams/src/scripts/: slam  visualize_trajectories
ros-pkg/core/optimization/: CMakeLists.txt  mainpage.dox  manifest.xml
ros-pkg/core/optimization/include/optimization/: common_functions.h  grid_search.h  nips.h  optimization.h
ros-pkg/core/optimization/src/: common_functions.cpp  demo_nesterov.cpp  grid_search.cpp  nips.cpp  optimization.cpp  test_optimization.cpp
ros-pkg/core/pose_graph_slam/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
ros-pkg/core/pose_graph_slam/include/pose_graph_slam/: connected_components.h  pose_graph_slam.h
ros-pkg/core/pose_graph_slam/src/lib/: connected_components.cpp  pose_graph_slam.cpp
ros-pkg/core/pose_graph_slam/src/test/: test_pose_graph_slam.cpp
ros-pkg/core/primesense_slam/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
ros-pkg/core/primesense_slam/data/: default_frame_alignment_params.txt  default_slam_params.txt  w2c.eig
ros-pkg/core/primesense_slam/include/primesense_slam/: frame_aligner.h  mean_depth_error.h  params.h  primesense_slam.h
ros-pkg/core/primesense_slam/src/lib/: frame_aligner.cpp  mean_depth_error.cpp  params.cpp  primesense_slam.cpp
ros-pkg/core/primesense_slam/src/prog/: primesense_slam.cpp  slam.cpp
ros-pkg/core/stream_sequence/: CMakeLists.txt  mainpage.dox  manifest.xml
ros-pkg/core/stream_sequence/include/stream_sequence/: frame_projector.h  pcl_typedefs.h  stream_sequence.h  stream_sequence_base.h  stream_sequence_pcl_wrapper.h  typedefs.h
ros-pkg/core/stream_sequence/src/lib/: .#stream_sequence_pcl_wrapper.cpp  frame_projector.cpp  stream_sequence.cpp  stream_sequence_base.cpp  stream_sequence_pcl_wrapper.cpp
ros-pkg/core/stream_sequence/src/prog/: sseq_to_freiburg.cpp
ros-pkg/utility/bag_of_tricks/: CMakeLists.txt  mainpage.dox  manifest.xml
ros-pkg/utility/bag_of_tricks/include/bag_of_tricks/: agent.h  bag_of_tricks.h  high_res_timer.h  image_region_iterator.h  lockable.h
ros-pkg/utility/bag_of_tricks/src/: high_res_timer.cpp  image_region_iterator.cpp  lockable.cpp  test_hrt.cpp  test_lockable.cpp
ros-pkg/utility/eigen_extensions/: CMakeLists.txt  mainpage.dox  manifest.xml
ros-pkg/utility/eigen_extensions/include/eigen_extensions/: eigen_extensions.h  random.h
ros-pkg/utility/eigen_extensions/src/: cat.cpp  convert.cpp  random.cpp  test_eigen_extensions.cpp  test_random.cpp
ros-pkg/utility/gzstream/: mainpage.dox
ros-pkg/utility/gzstream/src/: test_gunzip.cpp
ros-pkg/utility/serializable/: CMakeLists.txt  mainpage.dox  manifest.xml
ros-pkg/utility/serializable/include/serializable/: serializable.h
ros-pkg/utility/serializable/src/lib/: serializable.cpp
ros-pkg/utility/serializable/src/test/: test_serializable.cpp
ros-pkg/utility/timer/: CMakeLists.txt  mainpage.dox  manifest.xml
ros-pkg/utility/timer/src/lib/: timer.cpp
ros-pkg/utility/timer/src/test/: test_timer.cpp
